[package]
name = "transation-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
rust_decimal = { version = "1.22.0", features = ["serde-with-float"] }
serde = { version = "1.0.136", features = ["derive"] }

[dev-dependencies]
indoc = "1.0.4"
tempfile = "3.3.0"
